--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fancy, Delicious Restaurant</title>
+    <title>Restaurant Advisor</title>
   </head>
   <body>
     <noscript>
